--- a/project/css/bootstrap.css
+++ b/project/css/bootstrap.css
@@ -3118,8 +3118,8 @@ fieldset[disabled] .btn-default.focus {
 }
 .btn-primary {
   color: #fff;
-  background-color: #337ab7;
-  border-color: #2e6da4;
+  background-color: #f4511e;
+  border-color: #333;
 }
 .btn-primary:focus,
 .btn-primary.focus {
@@ -3344,6 +3344,21 @@ fieldset[disabled] .btn-warning.focus {
   color: #f0ad4e;
   background-color: #fff;
 }
+
+.btn-orange {
+    color: #fff;
+    background-color: orange;
+    border-color: black;
+}
+
+.btn-orange:focus,
+.btn-orange.focus {
+    color: #fff;
+    background-color: darkorange;
+    border-color: black;
+    
+}
+
 .btn-danger {
   color: #fff;
   background-color: #d9534f;
